<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pizza_emoji"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/headerGreen"
            android:src="@drawable/pizza_icon"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pizza_emoji" />

        <ImageView
            android:id="@+id/main_background"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/italian_food_1"
            android:contentDescription="@string/topImage"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/headerGreen"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/padding"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="@dimen/detailsTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="map"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/padding"
                android:text="@string/location"
                android:textColor="@color/textRed"
                android:textSize="@dimen/detailsTextSize"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="@dimen/padding"
                android:paddingVertical="@dimen/padding"
                android:text="@string/phone"
                android:textColor="@color/textRed"
                android:textSize="@dimen/detailsTextSize"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="@dimen/padding"
                android:paddingVertical="@dimen/padding"
                android:text="@string/email"
                android:textColor="@color/textRed"
                android:textSize="@dimen/detailsTextSize"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="@dimen/padding"
                android:paddingVertical="@dimen/padding"
                android:text="@string/url"
                android:textColor="@color/textRed"
                android:textSize="@dimen/detailsTextSize"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/padding"
                android:text="@string/hours"
                android:textColor="@color/textRed"
                android:textSize="@dimen/detailsTextSize" />

        </LinearLayout>

        <ImageView
            android:id="@+id/bottom_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/italian_food_2"
            android:contentDescription="@string/bottomImage"
            android:scaleType="centerCrop" />

    </LinearLayout>
</ScrollView>